<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:android="http://schemas.android.com/apk/res/android">

    <string name="version">Version : %s</string>
    <string name="homepage">Homepage : http://www.vtulife.com</string>
    <string name="email">Email</string>
    <string name="app_description">VTU Life android app is a mobile interface of www.vtulife.com. VTU Life provides a platform where Students can communicate, discuss and share resources, information and ideas</string>
    <string name="developer">Developer : V4 Creations</string>
    <string name="app_name">VTU Life</string>
    <string name="please_wait_">Please wait&#8230;</string>
    <string name="www_vtulife_com">www.vtulife.com</string>
    <string name="v4_creations">V4 Creations</string>
    <string name="post_a_pic_message"><b>\"Take a pic and share to us.\nWe will publish it on your name\"</b></string>
    <string name="revaluation">Revaluation</string>
    <string name="see_your_current_sem_result_here_nit_is_much_faster_nenter_your_usn_below_n">See your current sem result here.\nIt is much faster.\nEnter your USN below.\n(USN eg: 4PA10CS001)\n</string>
    <string name="usn">USN</string>
    <string name="description">Description</string>
    <string name="send">Send</string>
    <string name="size_">"Size : "</string>
    <string name="modified_">"Modified : "</string>
    <string name="external_marks">External Marks</string>
    <string name="class_usn">Class USN</string>
    <string name="see_your_full_class_current_sem_nresult_here_nit_is_much_faster_nenter_your_class_usn_below_n_class_usn_eg_4pa09cs_">See your full class current sem result here.\nIt is much faster.\nEnter your Class USN below.\n(Class USN eg: 4PA11CS)\n</string>
    <string name="please_reload">Please reload</string>
    <string name="usn_submit_button">Submit</string>
    <string name="click_to_choose_a_pic">Click to choose a picture</string>
    <string name="upload_files_message"><b>\"Sharing is caring.\nSend your notes to us\"</b></string>
    <string name="default_connection_error">Request could not be processed</string>
    <string name="internet_not_available">Internet connection not available</string>
    <string name="clear">Clear</string>
    <string name="back">Back</string>
    <string name="refresh">Refresh</string>
    <string name="notifications">Notifications</string>
    <string name="settings">Settings</string>
    <string name="forward">Forward</string>
    <string name="credits">Credits</string>
    <string name="student_help_text">Get in touch with us via Facebook or email for any further queries ,academic advice and guidance</string>
    <string name="student_help">Students help</string>
    <string name="facebook">Facebook</string>
    <string name="app_help">App help</string>
    <string name="user_manual">Download the latest user manual for this app here. This manual will guide you to make the best use of this app</string>
    <string name="download">Download</string>
    <string name="notification_marquee">Find all VTU related updates here. Click on a notification to mark as read. Swipe to delete a notification</string>
    <string name="notification_empty_text">There is nothing interesting right now.\nWe will keep you informed</string>
    <string name="result">Result</string>
    <string name="full_result_view">Full result view</string>
    <string name="to_see_all_semester_result_of_each_student_in_class_result">To see all semester result of each student in class result</string>
    <string name="sorted_result">Sorted result</string>
    <string name="sort_class_result_based_on_usn_but_doing_so_will_make_result_featching_slow_effective_only_in_android_3_0_and_above_">Sort class result based on USN. But doing so will make result featching slow</string>
    <string name="deep_class_result_search">Deep class result search</string>
    <string name="this_is_an_expensive_operation_better_disable_this_unless_you_realy_want">This is an expensive operation. Better disable this unless you really want</string>
    <string name="favorites">Favorites</string>
    <string name="set_your_favorite_page_as_default">Set your favorite page as default</string>
    <string name="clear_all_searched_usn">Clear all searched USN</string>
    <string name="history">History</string>
    <string name="file_icon">File icon</string>
    <string name="submit">Submit</string>
    <string name="select_a_file">Select a file</string>
    <string name="_">&#8230;</string>
    <string name="subject">Subject</string>
    <string name="department">Department</string>
    <string name="rate_the_app">Rate the app</string>
    <string name="like_us_on_fb">Like us on facebook</string>
    <string name="feedback">Feedback</string>
    <string name="help">Help</string>
    <string name="about">About</string>
    <string name="notification_icon">Notification icon</string>
    <string name="download_app_button">Download app button</string>
    <string name="view_more_details">View more details</string>
    <string name="download_complete">Download complete</string>
    <string name="download_unsuccessful">Download unsuccessful</string>
    <string name="registered_for_notification">Registered for notification</string>
    <string name="li_result">Result : %s</string>
    <string name="li_final">Final : %s</string>
    <string name="li_external">External : %s</string>
    <string name="li_percentage">Percentage : %s\%</string>
    <string name="li_total">Total : %s</string>
    <string name="li_semester">Semester : %s</string>
    <string name="li_internal">Internal : %s</string>
    <string name="fail">FAIL</string>
    <string name="fcd">FCD</string>
    <string name="fc">FC</string>
    <string name="sc">SC</string>
    <string name="na">NA</string>
    <string name="feedback_mail_subject">Feedback of %s android app</string>
    <string name="feedback_mail_body">Phone model : %1$s\nApplication name : %2$s\nApplication version name: %3$s\nApplication version code : %4$s\nPhone android version : %5$s\n\nPlease provide more details below :\n</string>
    <string name="send_feedback">Send feedback</string>
    <string name="downloading_from_vtu_life">Downloading from VTU Life &#8230;</string>
    <string name="welcome_to">Welcome to VTU Life</string>
    <string name="menu">Menu</string>
    <string name="exit_message">Press back again to exit</string>
    <string name="internet_connected">Internet connection established</string>
    <string name="internet_lost">Internet connection lost</string>
    <string name="pdf_viewer_missing">Please install a PDF viewer</string>
    <string name="send_email_for_help">Send email for help</string>
    <string name="play_app_missing">Google play app not installed</string>
    <string name="email_client_missing">There are no email clients installed</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="clear_all_notifications">Clear all notifications</string>
    <string name="notification_cleared">Notification cleared</string>
    <string name="no_notification_to_clear">There is no notification to clear</string>
    <string name="notification_deleted">%s deleted</string>
    <string name="usn_history_cleared">%s history cleared</string>
    <string name="no_search_history_available">No search history available</string>
    <string name="invalid_class_usn">Invalid class USN</string>
    <string name="invalid_usn">Invalid USN</string>
    <string name="website">Website</string>
    <string name="notes">Notes</string>
    <string name="class_result">Class result</string>
    <string name="share_notes">Share notes</string>
    <string name="share_a_pic">Share a pic</string>
    <string name="loading">Loading&#8230;</string>
    <string name="finished">Finished</string>
    <string name="cancelled">Cancelled</string>
    <string name="results">results</string>
    <string name="downloading_started">Downloading started</string>
    <string name="empty_folder">Empty folder</string>
    <string name="provide_all_details">Please provide all details</string>
    <string name="description_required">Enter description</string>
    <string name="send_email">Send via</string>
    <string name="file_not_exist">File doesn\'t exist</string>
    <string name="from_camera">From camera</string>
    <string name="from_sd_card">From SD card</string>
    <string name="choose_image">Select a image</string>
    <string name="complete_action_using">Complete action using</string>
    <string name="file_not_supported">File not supportted</string>
    <string name="error_occurred_please_retry">Error occurred please retry</string>
    <string name="share_photo_mail_subject">Share photos in VTU Life</string>
    <string name="share_notes_mail_subject">Share notes in VTU Life</string>
    <string name="share_notes_mail_body">Subject : %1$s\nDepartment : %2$s\nDescription : %3$s</string>
    <string name="file_browser_not_found">File browser not found</string>
    <string name="department_required">Enter department</string>
    <string name="subject_required">Enter subject</string>
    <string name="achievements">Achievements</string>
    <string name="_1st_winning_app_in_appinc_2013_nhttp_goo_gl_c6s3j4">1st winning app in AppInC 2013\nhttp://goo.gl/C6s3J4</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

</resources>