<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/version_label"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5sp"
        android:text="@string/version" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5sp"
        android:layout_marginLeft="5sp"
        android:layout_marginTop="5sp"
        android:autoLink="all"
        android:text="@string/app_description" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5sp"
        android:layout_marginLeft="5sp"
        android:autoLink="all"
        android:text="@string/developer" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5sp"
        android:layout_marginLeft="5sp"
        android:autoLink="all"
        android:text="@string/homepage" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5sp"
        android:layout_marginLeft="5sp"
        android:layout_marginTop="5sp"
        android:autoLink="all"
        android:text="@string/email" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5sp"
        android:layout_marginLeft="5sp"
        android:layout_marginTop="5sp"
        android:autoLink="all"
        android:text="@string/support" />

</LinearLayout>