<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/common_padding" >

    <com.V4Creations.vtulife.view.customviews.CustomeTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/normal_view_padding"
        android:text="@string/student_help"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/black" />

    <com.V4Creations.vtulife.view.customviews.CustomeTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/normal_view_padding"
        android:text="@string/student_help_text"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/text_muted"
        app:isItalic="true" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <com.V4Creations.vtulife.view.customviews.CustomeButton
            android:id="@+id/facebookButton"
            style="@style/VTULifeButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/normal_view_padding"
            android:layout_weight="1"
            android:drawableRight="@drawable/ic_action_good"
            android:text="@string/facebook" />

        <com.V4Creations.vtulife.view.customviews.CustomeButton
            android:id="@+id/emailButton"
            style="@style/VTULifeButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/normal_view_padding"
            android:layout_weight="1"
            android:drawableRight="@drawable/ic_action_email"
            android:text="@string/email" />
    </LinearLayout>

    <com.V4Creations.vtulife.view.customviews.CustomeTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/normal_view_padding"
        android:text="@string/app_help"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/black" />

    <com.V4Creations.vtulife.view.customviews.CustomeTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/normal_view_padding"
        android:text="@string/user_manual"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/text_muted"
        app:isItalic="true" />

    <com.V4Creations.vtulife.view.customviews.CustomeButton
        android:id="@+id/downloadButton"
        style="@style/VTULifeButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/normal_view_padding"
        android:drawableRight="@drawable/ic_action_download"
        android:text="@string/download" />

</LinearLayout>