<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_background"
    android:gravity="center"
    android:orientation="vertical" >

    <com.V4Creations.vtulife.view.customviews.CustomeTextView
        android:id="@+id/messageTextView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/post_a_pic_message"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/black"
        app:isItalic="true" />

    <ImageView
        android:id="@+id/takeAPhotoImageView"
        android:layout_width="@dimen/post_a_pic_width"
        android:layout_height="@dimen/post_a_pic_heigth"
        android:background="@drawable/bg_browse"
        android:contentDescription="@string/click_to_choose_a_pic"
        android:scaleType="fitXY"
        android:src="@drawable/camera_ic" />

    <com.V4Creations.vtulife.view.customviews.CustomeEditText
        android:id="@+id/descriptionEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/description"
        android:inputType="textMultiLine|textNoSuggestions"
        android:maxLength="500" />

    <com.V4Creations.vtulife.view.customviews.CustomeButton
        android:id="@+id/sendButton"
        style="@style/VTULifeButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/send" />

</LinearLayout>