<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/container_dropshadow" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/content_margin"
        android:background="@color/dark_background" >

        <ImageView
            android:id="@+id/takeAPhotoImageView"
            android:layout_width="@dimen/post_a_pic_width"
            android:layout_height="@dimen/post_a_pic_heigth"
            android:layout_centerInParent="true"
            android:background="@drawable/shadow_for_pic"
            android:contentDescription="@string/click_to_choose_a_pic"
            android:gravity="center_horizontal"
            android:paddingBottom="@dimen/post_a_pic_padding_bottom"
            android:src="@drawable/capture" />

        <TextView
            android:id="@+id/messageTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/takeAPhotoImageView"
            android:gravity="center_horizontal"
            android:paddingBottom="@dimen/message_text_padding_bottom"
            android:text="@string/post_a_pic_message"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#ffffff"
            android:textSize="@dimen/heading_font_size" />

        <Button
            android:id="@+id/sendButton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:gravity="center_horizontal"
            android:text="@string/send" />

        <EditText
            android:id="@+id/descriptionEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/sendButton"
            android:hint="@string/description"
            android:inputType="textMultiLine|textNoSuggestions"
            android:maxLength="500" />
    </RelativeLayout>

</FrameLayout>