<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_background"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/creditsTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@color/tab_background"
        android:padding="3dp"
        android:text="Credits"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <LinearLayout
        android:id="@+id/aboutLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="@dimen/content_margin" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@drawable/container_dropshadow"
                android:src="@drawable/ic_launcher" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/container_dropshadow"
                android:orientation="vertical"
                android:padding="15dp" >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:text="@string/app_name"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="@android:color/black" />

                <TextView
                    android:id="@+id/versionTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:text="@string/version"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@android:color/black" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autoLink="web"
                    android:singleLine="true"
                    android:text="@string/homepage"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="@android:color/black" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:text="@string/developer"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="@android:color/black" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autoLink="email"
                    android:singleLine="true"
                    android:text="@string/email"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="@android:color/black" />
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/marqueueTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/tab_background"
            android:ellipsize="marquee"
            android:marqueeRepeatLimit="marquee_forever"
            android:padding="5dp"
            android:scrollHorizontally="true"
            android:singleLine="true"
            android:text="@string/app_description"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </LinearLayout>

    <ListView
        android:background="@color/list_odd"
        android:id="@android:id/list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/aboutLinearLayout"
        android:layout_below="@id/creditsTextView"
        android:scrollbars="none" />

</RelativeLayout>