<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_background"
    android:scrollbars="none" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <com.V4Creations.vtulife.view.customviews.CustomeTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/box_background"
                android:padding="@dimen/common_padding"
                android:text="@string/result"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/black" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/common_padding" >

                <com.V4Creations.vtulife.view.customviews.CustomeTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/full_result_view"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@android:color/black" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                    <org.jraf.android.backport.switchwidget.Switch
                        android:id="@+id/fullResultViewCompoundButton"
                        style="@style/Widget.Holo.Light.CompoundButton.Switch"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:padding="2dp" />

                    <com.V4Creations.vtulife.view.customviews.CustomeTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_centerVertical="true"
                        android:layout_toLeftOf="@id/fullResultViewCompoundButton"
                        android:text="@string/to_see_all_semester_result_of_each_student_in_class_result"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:textColor="@color/text_muted"
                        app:isItalic="true" />
                </RelativeLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:orientation="vertical" >

                <com.V4Creations.vtulife.view.customviews.CustomeTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sorted_result"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@android:color/black" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                    <org.jraf.android.backport.switchwidget.Switch
                        android:id="@+id/sortedResultCompoundButton"
                        style="@style/Widget.Holo.Light.CompoundButton.Switch"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:padding="2dp" />

                    <com.V4Creations.vtulife.view.customviews.CustomeTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_centerVertical="true"
                        android:layout_toLeftOf="@id/sortedResultCompoundButton"
                        android:text="@string/sort_class_result_based_on_usn_but_doing_so_will_make_result_featching_slow_effective_only_in_android_3_0_and_above_"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:textColor="@color/text_muted"
                        app:isItalic="true" />
                </RelativeLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:orientation="vertical" >

                <com.V4Creations.vtulife.view.customviews.CustomeTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/deep_class_result_search"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@android:color/black" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                    <org.jraf.android.backport.switchwidget.Switch
                        android:id="@+id/deepSearchCompoundButton"
                        style="@style/Widget.Holo.Light.CompoundButton.Switch"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:padding="2dp" />

                    <com.V4Creations.vtulife.view.customviews.CustomeTextView
                        android:id="@+id/subTitile"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_centerVertical="true"
                        android:layout_toLeftOf="@id/deepSearchCompoundButton"
                        android:text="@string/this_is_an_expensive_operation_better_disable_this_unless_you_realy_want"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:textColor="@color/text_muted"
                        app:isItalic="true" />
                </RelativeLayout>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <com.V4Creations.vtulife.view.customviews.CustomeTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/box_background"
                android:padding="@dimen/common_padding"
                android:text="@string/favorites"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/black" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:orientation="vertical" >

                <com.V4Creations.vtulife.view.customviews.CustomeTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/set_your_favorite_page_as_default"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@android:color/black" />

                <Spinner
                    android:id="@+id/favoritePageSpinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:entries="@array/fragmentNames" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <com.V4Creations.vtulife.view.customviews.CustomeTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/box_background"
                android:padding="@dimen/common_padding"
                android:text="@string/history"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:orientation="vertical" >

                <com.V4Creations.vtulife.view.customviews.CustomeTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/clear_all_searched_usn"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@android:color/black" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="@dimen/common_padding" >

                    <Button
                        style="@style/VTULifeButton"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="@dimen/normal_view_padding"
                        android:layout_weight="1"
                        android:onClick="clearButtonClick"
                        android:tag="0"
                        android:text="@string/usn" />

                    <Button
                        style="@style/VTULifeButton"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/normal_view_padding"
                        android:layout_weight="1"
                        android:onClick="clearButtonClick"
                        android:tag="1"
                        android:text="@string/class_usn" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</ScrollView>